center headings and other elements on page and fix little alignment issues on smaller devices

--- a/src/RecipeDetail.css
+++ b/src/RecipeDetail.css
@@ -1,3 +1,5 @@
+/*Containers and margins */
+
 .wrap-container {
     background-image: url('./images/bg_recipes.png');
 }
@@ -5,9 +7,15 @@
 .container {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 0 auto;
 }
+
+@media screen and (min-width: 992px) {
+    .preparation-column {
+        padding-right: 5em;
+    }
+}
+
 
 /* Text */
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@1,600&display=swap');
@@ -16,12 +24,14 @@ h1 {
     padding-bottom: 0px;
     margin-bottom: 0px;
     font-family: "CrimsonText";
+    margin: auto;
 }
 
 h2 {
     padding-bottom: 1rem;
     font-family: "CrimsonText";
     font-style: normal;
+    text-align: center;
 }
 
 p {
@@ -31,6 +41,10 @@ p {
 .difficultyIndication svg {
     font-size: 0.8em;
     margin: 2px;
+}
+
+.center-details {
+    margin: 0 auto;
 }
 
 
@@ -98,11 +112,6 @@ p {
     .carousel-width {
         width: 450px;
     }
-
-    .container {
-        margin-left: auto;
-        margin-right: auto;
-    }
 }
 
 /* Tablet */
@@ -158,7 +167,11 @@ p {
 }
 
 
-/* Carousel control and indicators */
+/* Carousel, control and indicators */
+.carousel {
+    margin: 0 auto;
+}
+
 .recipe-control-icon {
     font-size: 2.5em;
 }
